--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django-debug-toolbar = "*"
 django-extensions = "*"
 whitenoise = "==5.2.0"
 django-environ = "*"
+django-allauth = "~=0.44.0"
 
 [requires]
 python_version = "3.8"
