--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-extensions = "*"
 whitenoise = "==5.2.0"
 django-environ = "*"
 django-allauth = "~=0.44.0"
+django-money = "*"
 
 [requires]
 python_version = "3.8"
