--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ django-extensions = "*"
 whitenoise = "==5.2.0"
 django-environ = "*"
 django-allauth = "~=0.44.0"
-django-money = "*"
+psycopg2-binary = "==2.9.1"
 
 [requires]
 python_version = "3.8"
