--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,11 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
+# uv
+#   It's generally recommended to include uv.lock in version control.
+#   This ensures reproducible installs across different environments.
+#uv.lock
+
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
