Add and use django-htmx for redirects

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "django-debug-toolbar",
     "django-environ",
     "django-extensions",
+    "django-htmx>=1.27.0",
     "psycopg2-binary>=2.9.1",
     "whitenoise>=6.5",
 ]
